Partial support for Android

--- a/Platforms/Android/Android.csproj
+++ b/Platforms/Android/Android.csproj
@@ -81,7 +81,7 @@
     <AndroidResource Include="Resources\Values\Styles.xml" />
   </ItemGroup>
   <ItemGroup>
-    <MonoGameContentReference Include="Content\Content.mgcb" />
+    <None Include="Properties\AndroidManifest.xml" />
   </ItemGroup>
   <Import Project="..\..\Pong\Pong.projitems" Label="Shared" />
   <Import Project="$(MSBuildExtensionsPath)\Novell\Novell.MonoDroid.CSharp.targets" />
