--- a/Platforms/Android/Android.csproj
+++ b/Platforms/Android/Android.csproj
@@ -58,6 +58,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Activity1.cs" />
+    <Compile Include="Partial\IO\Input.Android.cs" />
+    <Compile Include="Partial\UI\Button.Android.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
