--- a/Platforms/Android/Android.csproj
+++ b/Platforms/Android/Android.csproj
@@ -59,6 +59,8 @@
   <ItemGroup>
     <Compile Include="Activity1.cs" />
     <Compile Include="Partial\IO\PlayerInput.Android.cs" />
+    <Compile Include="Partial\States\GameState.Android.cs" />
+    <Compile Include="Partial\States\MainMenuState.Android.cs" />
     <Compile Include="Partial\UI\Button.Android.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
